...
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="312dp"
        android:onClick="updateContact"
        android:text="Update Data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/deleteButton"
...
